# ha-hpe1820

./: .pre-commit-config.yaml  README.md  compose.yaml  hacs.json  pyproject.toml  tox.ini
.github/workflows/: building.yaml  linting.yaml  publish.yaml  testing.yaml
custom_components/hpe1820/: __init__.py  client.py  config_flow.py  const.py  coordinator.py  devices.py  helpers.py  icons.json  manifest.json  services.py  services.yaml  strings.json  switch.py
custom_components/hpe1820/translations/: en.json  it.json
tests/: __init__.py  conftest.py  helpers.py  test_client.py  test_config_flow.py  test_coordinator.py  test_devices.py  test_helpers.py  test_options_flow.py  test_services.py  test_switch.py
tests/data/: responses.py
